fix crud operations and auth error
